# eri-engine

./: .editorconfig  .gitignore  README.md  meson.build
.github/workflows/: build.yml
benchmarks/: benchmark_eri.cpp  benchmark_overlap.cpp  meson.build
include/eri/: cgf.h  enums.h  version.h.in
include/eri/basis/: basisset.h
include/eri/chem/: molecule.h
include/eri/cog/: hellsing_cache.h
include/eri/engine/: engine.h
include/eri/math/: boys.h  dense_square_matrix.h  eri_tensor_builder.h  fgamma.h  fgamma_interpolation.h  matrix_builder.h  symmetric_eri_tensor.h
include/eri/one_electron/: kinetic.h  nuclear.h  overlap.h
include/eri/ops/: one_electron_ops.h  ops.h  two_electron_ops.h
include/eri/two_electron/: eri.h  eri_index.h
include/eri/utils/: executable_dir.h
src/: meson.build
src/basis/: basisset.cpp  cgf.cpp
src/cog/: hellsing_cache.cpp
src/detail/: eri_hellsing.h  eri_huzinaga.h  eri_primitive.h  kinetic_primitive.h  normalization.h  nuclear_hellsing.h  nuclear_huzinaga.h  nuclear_primitive.h  overlap_hellsing.h  overlap_huzinaga.h  overlap_primitive.h
src/detail/eri/: hellsing_cached.h  huzinaga.h  router.h
src/engine/: engine.cpp  engine.h
src/math/: binomial_prefactor.h  boys.cpp  double_factorial.h  factorial.h  fgamma.cpp  fgamma.h  fgamma_acc.h  fgamma_block.h  fgamma_interpolation.cpp  fgamma_interpolation.h  fgamma_nr.h  gaussian_product.h  ipow.h  sign_pow.h
src/one_electron/: kinetic.cpp  nuclear.cpp  overlap.cpp  overlap_hellsing.cpp  overlap_huzinaga.cpp
src/two_electron/: eri.cpp  eri_contracted.h
src/two_electron/primitives/: hellsing.h  hellsing_cached.h  huzinaga.h  router.h
tests/: meson.build  test_basisset.cpp  test_cgf.cpp  test_engine.cpp  test_eri.cpp  test_fgamma.cpp  test_kinetic.cpp  test_nuclear.cpp  test_ops.cpp  test_overlap.cpp
tests/data/: h2o_eri.txt  meson.build  sto-3g.json
